refactor(analyzer): address PR review feedback
- Rename TableOperationView to TableOperationRecord (no SQL-view confusion)
- Add TableSummary as internal table model; remove GetTableResponseBody from
  OperationAnalyzer interface so analyzer is decoupled from Tables client API
- Add CadencePolicy class for shared time-based scheduling logic; OFD analyzer
  delegates shouldSchedule to it instead of embedding the logic inline
- Externalize OFD retry intervals (success: 24h, failure: 1h) to application.properties
  as ofd.success-retry-hours / ofd.failure-retry-hours
- Externalize retry magic numbers to application.properties as retry.max-attempts
  and retry.backoff-period-ms
- Catch specific WebClient exceptions instead of broad Exception in
  OptimizerServiceClient; add connection-error unit tests for both methods

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>